added promt test

--- a/notebooks/toc_cleaning_test.ipynb
+++ b/notebooks/toc_cleaning_test.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "5dbbfa97",
    "metadata": {},
    "outputs": [],
@@ -450,10 +450,12 @@
     "class TextCleaner:\n",
     "    def __init__(self):\n",
     "        self.patterns = {\n",
+    "            # patterns to filter out unwanted lines\n",
     "            'numbered_lines': re.compile(r'^\\d+\\.\\d+\\b'),\n",
     "            'symbol_only': re.compile(r'^[\\W_]+$'),\n",
     "            'copyright_pattern': re.compile(r'(©|ⓒ|\\(c\\)|\\(C\\)|c\\s*⃝)', re.IGNORECASE),\n",
     "            'exercises_pattern': re.compile(r'^\\s*Exercises?\\b[\\s\\d.:!?-]*$', re.IGNORECASE),\n",
+    "            # noise patterns\n",
     "            'dotted_noise': re.compile(r'(?<!\\w)([.\\s]){3,}(?!\\w)'),  \n",
     "            'symbol_noise': re.compile(r'(?<!\\w)([\\W]\\s?){3,}(?!\\w)')\n",
     "            }\n",
