--- a/notebooks/load_fake_data.ipynb
+++ b/notebooks/load_fake_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "id": "fb3090a9",
    "metadata": {},
    "outputs": [
@@ -1319,56 +1319,6 @@
       "10.13 Innovation Management\n",
       "10.14 Emerging Technologies Integration\n",
       "10.15 Future of Product Management\n",
-      "\n",
-      "9. Healthcare Technology and Digital Health\n",
-      "Chapter 1: Digital Health Transformation\n",
-      "1.1 Healthcare Technology Landscape\n",
-      "1.2 Digital Health Strategy Development\n",
-      "1.3 Electronic Health Record Systems\n",
-      "1.4 Interoperability and Standards\n",
-      "1.5 Patient Engagement Platforms\n",
-      "1.6 Healthcare Data Analytics\n",
-      "1.7 Regulatory Compliance Framework\n",
-      "1.8 Privacy and Security Requirements\n",
-      "1.9 Change Management in Healthcare\n",
-      "1.10 Technology Adoption Challenges\n",
-      "1.11 Return on Investment Analysis\n",
-      "1.12 Stakeholder Engagement\n",
-      "1.13 Workflow Integration\n",
-      "1.14 Quality Improvement Programs\n",
-      "1.15 Future Healthcare Technology Trends\n",
-      "Chapter 2: Telemedicine and Remote Care\n",
-      "2.1 Telemedicine Platform Development\n",
-      "2.2 Video Consultation Systems\n",
-      "2.3 Remote Patient Monitoring\n",
-      "2.4 Mobile Health Applications\n",
-      "2.5 Virtual Reality in Healthcare\n",
-      "2.6 Augmented Reality for Medical Training\n",
-      "2.7 Wearable Device Integration\n",
-      "2.8 Internet of Medical Things\n",
-      "2.9 Home Healthcare Technology\n",
-      "2.10 Chronic Disease Management\n",
-      "2.11 Mental Health Digital Solutions\n",
-      "2.12 Emergency Response Systems\n",
-      "2.13 Rural Healthcare Solutions\n",
-      "2.14 Telemedicine Regulations\n",
-      "2.15 Future of Remote Healthcare\n",
-      "Chapter 3: Clinical Decision Support Systems\n",
-      "3.1 Evidence-Based Medicine Integration\n",
-      "3.2 Clinical Guidelines Implementation\n",
-      "3.3 Drug Interaction Checking\n",
-      "3.4 Diagnostic Support Tools\n",
-      "3.5 Treatment Recommendation Systems\n",
-      "3.6 Risk Assessment and Prediction\n",
-      "3.7 Clinical Workflow Integration\n",
-      "3.8 Alert and Notification Systems\n",
-      "3.9 Quality Measure Tracking\n",
-      "3.10 Clinical Research Support\n",
-      "3.11 Population Health Management\n",
-      "3.12 Personalized Medicine\n",
-      "3.13 Machine Learning in Clinical Decision\n",
-      "3.14 User Interface Design for Clinicians\n",
-      "3.15 Evaluation and Improvement\n",
       "\n"
      ]
     }
@@ -1387,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "6a71393b",
    "metadata": {},
    "outputs": [
@@ -1399,6 +1349,7 @@
       "  {\n",
       "    \"id\": 1,\n",
       "    \"name\": \"Digital Marketing and Social Media Strategy\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -2075,6 +2026,7 @@
       "  {\n",
       "    \"id\": 2,\n",
       "    \"name\": \"Machine Learning and Artificial Intelligence\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -2751,6 +2703,7 @@
       "  {\n",
       "    \"id\": 3,\n",
       "    \"name\": \"Cloud Computing and DevOps\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -3427,6 +3380,7 @@
       "  {\n",
       "    \"id\": 4,\n",
       "    \"name\": \"Financial Technology and Fintech Innovation\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -4103,6 +4057,7 @@
       "  {\n",
       "    \"id\": 5,\n",
       "    \"name\": \"Sustainable Energy and Environmental Solutions\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -4779,6 +4734,7 @@
       "  {\n",
       "    \"id\": 6,\n",
       "    \"name\": \"Data Science and Business Analytics\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -5455,6 +5411,7 @@
       "  {\n",
       "    \"id\": 7,\n",
       "    \"name\": \"Cybersecurity and Information Protection\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -6131,6 +6088,7 @@
       "  {\n",
       "    \"id\": 8,\n",
       "    \"name\": \"Product Management and Strategy\",\n",
+      "    \"chapters_counts\": 9,\n",
       "    \"chapters\": [\n",
       "      {\n",
       "        \"number\": 1,\n",
@@ -6803,213 +6761,6 @@
       "        ]\n",
       "      }\n",
       "    ]\n",
-      "  },\n",
-      "  {\n",
-      "    \"id\": 9,\n",
-      "    \"name\": \"Healthcare Technology and Digital Health\",\n",
-      "    \"chapters\": [\n",
-      "      {\n",
-      "        \"number\": 1,\n",
-      "        \"title\": \"Digital Health Transformation\",\n",
-      "        \"subchapter_count\": 15,\n",
-      "        \"subchapters\": [\n",
-      "          {\n",
-      "            \"number\": \"1.1\",\n",
-      "            \"title\": \"Healthcare Technology Landscape\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.2\",\n",
-      "            \"title\": \"Digital Health Strategy Development\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.3\",\n",
-      "            \"title\": \"Electronic Health Record Systems\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.4\",\n",
-      "            \"title\": \"Interoperability and Standards\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.5\",\n",
-      "            \"title\": \"Patient Engagement Platforms\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.6\",\n",
-      "            \"title\": \"Healthcare Data Analytics\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.7\",\n",
-      "            \"title\": \"Regulatory Compliance Framework\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.8\",\n",
-      "            \"title\": \"Privacy and Security Requirements\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.9\",\n",
-      "            \"title\": \"Change Management in Healthcare\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.10\",\n",
-      "            \"title\": \"Technology Adoption Challenges\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.11\",\n",
-      "            \"title\": \"Return on Investment Analysis\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.12\",\n",
-      "            \"title\": \"Stakeholder Engagement\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.13\",\n",
-      "            \"title\": \"Workflow Integration\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.14\",\n",
-      "            \"title\": \"Quality Improvement Programs\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"1.15\",\n",
-      "            \"title\": \"Future Healthcare Technology Trends\"\n",
-      "          }\n",
-      "        ]\n",
-      "      },\n",
-      "      {\n",
-      "        \"number\": 2,\n",
-      "        \"title\": \"Telemedicine and Remote Care\",\n",
-      "        \"subchapter_count\": 15,\n",
-      "        \"subchapters\": [\n",
-      "          {\n",
-      "            \"number\": \"2.1\",\n",
-      "            \"title\": \"Telemedicine Platform Development\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.2\",\n",
-      "            \"title\": \"Video Consultation Systems\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.3\",\n",
-      "            \"title\": \"Remote Patient Monitoring\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.4\",\n",
-      "            \"title\": \"Mobile Health Applications\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.5\",\n",
-      "            \"title\": \"Virtual Reality in Healthcare\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.6\",\n",
-      "            \"title\": \"Augmented Reality for Medical Training\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.7\",\n",
-      "            \"title\": \"Wearable Device Integration\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.8\",\n",
-      "            \"title\": \"Internet of Medical Things\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.9\",\n",
-      "            \"title\": \"Home Healthcare Technology\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.10\",\n",
-      "            \"title\": \"Chronic Disease Management\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.11\",\n",
-      "            \"title\": \"Mental Health Digital Solutions\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.12\",\n",
-      "            \"title\": \"Emergency Response Systems\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.13\",\n",
-      "            \"title\": \"Rural Healthcare Solutions\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.14\",\n",
-      "            \"title\": \"Telemedicine Regulations\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"2.15\",\n",
-      "            \"title\": \"Future of Remote Healthcare\"\n",
-      "          }\n",
-      "        ]\n",
-      "      },\n",
-      "      {\n",
-      "        \"number\": 3,\n",
-      "        \"title\": \"Clinical Decision Support Systems\",\n",
-      "        \"subchapter_count\": 15,\n",
-      "        \"subchapters\": [\n",
-      "          {\n",
-      "            \"number\": \"3.1\",\n",
-      "            \"title\": \"Evidence-Based Medicine Integration\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.2\",\n",
-      "            \"title\": \"Clinical Guidelines Implementation\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.3\",\n",
-      "            \"title\": \"Drug Interaction Checking\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.4\",\n",
-      "            \"title\": \"Diagnostic Support Tools\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.5\",\n",
-      "            \"title\": \"Treatment Recommendation Systems\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.6\",\n",
-      "            \"title\": \"Risk Assessment and Prediction\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.7\",\n",
-      "            \"title\": \"Clinical Workflow Integration\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.8\",\n",
-      "            \"title\": \"Alert and Notification Systems\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.9\",\n",
-      "            \"title\": \"Quality Measure Tracking\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.10\",\n",
-      "            \"title\": \"Clinical Research Support\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.11\",\n",
-      "            \"title\": \"Population Health Management\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.12\",\n",
-      "            \"title\": \"Personalized Medicine\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.13\",\n",
-      "            \"title\": \"Machine Learning in Clinical Decision\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.14\",\n",
-      "            \"title\": \"User Interface Design for Clinicians\"\n",
-      "          },\n",
-      "          {\n",
-      "            \"number\": \"3.15\",\n",
-      "            \"title\": \"Evaluation and Improvement\"\n",
-      "          }\n",
-      "        ]\n",
-      "      }\n",
-      "    ]\n",
       "  }\n",
       "]\n"
      ]
@@ -7039,6 +6790,7 @@
     "            current_book = OrderedDict()\n",
     "            current_book[\"id\"] = int(match.group(1))\n",
     "            current_book[\"name\"] = match.group(2).strip()\n",
+    "            current_book[\"chapters_counts\"] = 0\n",
     "            current_book[\"chapters\"] = []\n",
     "            current_chapter = None\n",
     "\n",
@@ -7052,6 +6804,7 @@
     "                \"subchapter_count\": 0,\n",
     "                \"subchapters\": []\n",
     "            }\n",
+    "            current_book[\"chapters_counts\"] = len(current_book[\"chapters\"])\n",
     "            current_book[\"chapters\"].append(current_chapter)\n",
     "\n",
     "        # Check if this is a subchapter\n",
@@ -7090,7 +6843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "f0bdb9d2",
    "metadata": {},
    "outputs": [],
@@ -7108,13 +6861,13 @@
     "        doc = Document(cur_path)\n",
     "        docx_text = \"\\n\".join(p.text for p in doc.paragraphs if p.text.strip())\n",
     "        result = parse_structured_toc(docx_text)\n",
-    "        full_results.append(result)\n",
-    "    elif file.endswith(\"_chapters.docx\"):\n",
+    "        full_results.extend(result)\n",
+    "    elif file.endswith(\"_chapter.docx\"):\n",
     "        cur_path = os.path.join(data_dir, file)\n",
     "        doc = Document(cur_path)\n",
     "        docx_text = \"\\n\".join(p.text for p in doc.paragraphs if p.text.strip())\n",
     "        result = parse_structured_toc(docx_text)\n",
-    "        chapters_results.append(result)\n",
+    "        chapters_results.extend(result)\n",
     "\n",
     "with open(os.path.join(output_dir, \"all_full.json\"), \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(full_results, f, indent=2, ensure_ascii=False)\n",
@@ -7125,7 +6878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "id": "86261be4",
    "metadata": {},
    "outputs": [
