organised generator as function

--- a/notebooks/synthetic_data_generator.ipynb
+++ b/notebooks/synthetic_data_generator.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d89d2afb",
    "metadata": {},
    "outputs": [],
@@ -146,6 +146,7 @@
     "\n",
     "\n",
     "def generate_text_noise(toc_noise):\n",
+    "    \"\"\"Sample random text from toc noise\"\"\"\n",
     "    random_toc = str(np.random.choice(toc_noise, 1, replace=False)[0])\n",
     "    words = random_toc.split()\n",
     "    n_words = len(words)\n",
@@ -188,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6389b369",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_weighted_generator(max_number, start=4, weight_range=(7, 11), weight_multiplier=3):\n",
+    "def create_weighted_generator(max_number, max_ceiling=None, start=4, weight_range=(7, 11), weight_multiplier=3):\n",
     "    \"\"\"\n",
     "    Creates a weighted random generator for range [start, max_number]\n",
     "    with higher weights for numbers in weight_range.\n",
@@ -201,6 +202,11 @@
     "    if max_number < start:\n",
     "        raise ValueError(f\"max_number ({max_number}) must be >= start ({start})\")\n",
     "    \n",
+    "    # Set a max range\n",
+    "    if max_ceiling:\n",
+    "        if max_number > max_ceiling:\n",
+    "            max_number = max_ceiling\n",
+    "\n",
     "    # Create the range\n",
     "    numbers = np.arange(start, max_number + 1)\n",
     "    \n",
@@ -222,6 +228,7 @@
     "\n",
     "\n",
     "def add_random_spacing(range=range(1,5), weights=[.6,.2,.1,.1]):\n",
+    "    \"\"\" add random spacing\"\"\"\n",
     "    n_spaces = random.choices(range, weights=weights, k=1)[0]\n",
     "    spacing = \" \" * n_spaces\n",
     "    return spacing"
@@ -333,15 +340,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bcfd4f5a",
+   "execution_count": 57,
+   "id": "18cda556",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.8"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ".2-1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "bcfd4f5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subchapters_random_noise = \n",
+    "chapters_random_noise =\n",
+    "chapters_systemic_noise =\n",
+    "add_subchapters ="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "42d71c62",
    "metadata": {},
    "outputs": [
@@ -2843,143 +2887,151 @@
     "logging.getLogger().setLevel(logging.INFO)\n",
     "\n",
     "\n",
-    "# randomness variables\n",
-    "first_page_numbers = [1, 2, 3, 4, 5]\n",
-    "first_page_weights = [6, 3, 3, 1, 1]  # 3 and 4 are 5x more likely\n",
-    "page_range_numbers = np.arange(5, 60)  \n",
-    "page_range_weights = np.where((page_range_numbers >= 15) & (page_range_numbers <= 35), 3, 1)\n",
+    "def generate_synthetic_data(json_data,\n",
+    "                            toc_noise,\n",
+    "                            subchapter_random_noise=.2,\n",
+    "                            chapter_random_noise=.3,\n",
+    "                            chapter_systemic_noise=.2,\n",
+    "                            add_subchapter=.3\n",
+    "                            ):\n",
     "\n",
-    "# output variables\n",
-    "book_name = None\n",
-    "output_data = []\n",
+    "    # randomness variables\n",
+    "    first_page_numbers = [1, 2, 3, 4, 5]\n",
+    "    first_page_weights = [6, 3, 3, 1, 1]  # 3 and 4 are 5x more likely\n",
+    "    page_range_numbers = np.arange(5, 60)  \n",
+    "    page_range_weights = np.where((page_range_numbers >= 15) & (page_range_numbers <= 35), 3, 1)\n",
     "\n",
-    "for book in json_data:\n",
-    "    \n",
-    "    # set new book name for each book\n",
-    "    logging.debug(\"\\nNew book:\")\n",
-    "    book_name = book[\"name\"]\n",
-    "    number_of_chapters = book[\"chapters_counts\"]\n",
-    "    current_chapter = {}\n",
-    "    prompt = \"\"\n",
+    "    # output variables\n",
+    "    output_data = []\n",
     "\n",
-    "    # set book layout variables\n",
-    "    book_layout = generate_chapter_layout()\n",
+    "    for book in json_data:\n",
+    "        \n",
+    "        # set new book name for each book\n",
+    "        logging.debug(\"\\nNew book:\")\n",
+    "        book_name = book[\"name\"]\n",
+    "        number_of_chapters = book[\"chapters_counts\"]\n",
+    "        current_chapter = {}\n",
+    "        prompt = \"\"\n",
     "\n",
-    "    # set systemic noise layout if needed\n",
-    "    add_systemic_noise = random.choices([0, 1], weights=[0.8, 0.2], k=1)[0]\n",
-    "    if add_systemic_noise:\n",
-    "        noise_layout = generate_systemic_noise_layout()\n",
-    "    \n",
-    "    # define chapters numbers to use\n",
-    "    number_of_chapters_subset = create_weighted_generator(number_of_chapters)\n",
-    "    chapters_ids = np.random.choice(range(1,number_of_chapters+1),\n",
-    "                                    size=number_of_chapters_subset,\n",
-    "                                    replace=False)\n",
-    "    \n",
-    "    # define wheter to add subchapters\n",
-    "    add_subchapters = random.choices([0, 1], weights=[0.1, 0.9], k=1)[0]\n",
-    "    if add_subchapters:\n",
-    "        use_numbers = random.choices([0,1], weights=[.85,.15], k=1)[0]\n",
-    "        add_page = random.choices([0,1], weights=[.75,.25], k=1)[0]\n",
+    "        # set book layout variables\n",
+    "        book_layout = generate_chapter_layout()\n",
     "\n",
-    "    # initialise labe\n",
-    "    book_label = '```json\\n[\\n'\n",
+    "        # set systemic noise layout if needed\n",
+    "        add_systemic_noise = random.choices([0, 1], weights=[1-chapter_systemic_noise, chapter_systemic_noise], k=1)[0]\n",
+    "        if add_systemic_noise:\n",
+    "            noise_layout = generate_systemic_noise_layout()\n",
+    "        \n",
+    "        # define chapters numbers to use\n",
+    "        number_of_chapters_subset = create_weighted_generator(number_of_chapters)\n",
+    "        chapters_ids = np.random.choice(range(1,number_of_chapters+1),\n",
+    "                                        size=number_of_chapters_subset,\n",
+    "                                        replace=False)\n",
+    "        \n",
+    "        # define wheter to add subchapters\n",
+    "        add_subchapters = random.choices([0, 1], weights=[1-add_subchapter, add_subchapter], k=1)[0]\n",
+    "        if add_subchapters:\n",
+    "            use_numbers = random.choices([0,1], weights=[.85,.15], k=1)[0]\n",
+    "            add_page = random.choices([0,1], weights=[.75,.25], k=1)[0]\n",
     "\n",
-    "    for idx,chapter_id in enumerate(chapters_ids):\n",
-    "        for chapter in book['chapters']:\n",
-    "            if chapter[\"number\"] == chapter_id:\n",
+    "        # initialise labe\n",
+    "        book_label = '```json\\n[\\n'\n",
     "\n",
-    "                # get chapter information\n",
-    "                chapter_title = chapter[\"title\"]\n",
-    "                chapter_number = idx + 1\n",
-    "                number_of_subchapter = chapter[\"subchapter_count\"]\n",
+    "        for idx,chapter_id in enumerate(chapters_ids):\n",
+    "            for chapter in book['chapters']:\n",
+    "                if chapter[\"number\"] == chapter_id:\n",
     "\n",
-    "                # get chapters pages\n",
-    "                if not bool(current_chapter):\n",
-    "                    logging.debug(\"new chapter\")\n",
-    "                    start_page = int(random.choices(first_page_numbers, weights=first_page_weights, k=1)[0])\n",
-    "                    end_page = int(start_page + random.choices(page_range_numbers, weights=page_range_weights, k=1)[0])\n",
-    "                else:\n",
-    "                    logging.debug(\"continue chapter\")\n",
-    "                    start_page = current_chapter[\"end_page\"] + 1\n",
-    "                    end_page = int(start_page + random.choices(page_range_numbers, weights=page_range_weights, k=1)[0])\n",
+    "                    # get chapter information\n",
+    "                    chapter_title = chapter[\"title\"]\n",
+    "                    chapter_number = idx + 1\n",
+    "                    number_of_subchapter = chapter[\"subchapter_count\"]\n",
     "\n",
-    "                # add label\n",
-    "                current_chapter = {\n",
-    "                    \"chapter_number\": chapter_number,\n",
-    "                    \"chapter_title\": chapter_title,\n",
-    "                    \"start_page\": start_page,\n",
-    "                    \"end_page\": end_page\n",
-    "                }\n",
-    "                book_label += format_labels(chapter_number, chapter_title, start_page, end_page)\n",
-    "                logging.debug(f\"{current_chapter}\")\n",
+    "                    # get chapters pages\n",
+    "                    if not bool(current_chapter):\n",
+    "                        logging.debug(\"new chapter\")\n",
+    "                        start_page = int(random.choices(first_page_numbers, weights=first_page_weights, k=1)[0])\n",
+    "                        end_page = int(start_page + random.choices(page_range_numbers, weights=page_range_weights, k=1)[0])\n",
+    "                    else:\n",
+    "                        logging.debug(\"continue chapter\")\n",
+    "                        start_page = current_chapter[\"end_page\"] + 1\n",
+    "                        end_page = int(start_page + random.choices(page_range_numbers, weights=page_range_weights, k=1)[0])\n",
     "\n",
-    "                # define chapter layout\n",
-    "                formatted_chapter = format_chapter(\n",
-    "                    book_layout,\n",
-    "                    chapter_title,\n",
-    "                    chapter_number,\n",
-    "                    start_page\n",
-    "                )\n",
+    "                    # add label\n",
+    "                    current_chapter = {\n",
+    "                        \"chapter_number\": chapter_number,\n",
+    "                        \"chapter_title\": chapter_title,\n",
+    "                        \"start_page\": start_page,\n",
+    "                        \"end_page\": end_page\n",
+    "                    }\n",
+    "                    book_label += format_labels(chapter_number, chapter_title, start_page, end_page)\n",
+    "                    logging.debug(f\"{current_chapter}\")\n",
     "\n",
-    "                # add chapter to prompt\n",
-    "                prompt += f\"{formatted_chapter}\\n\"\n",
+    "                    # define chapter layout\n",
+    "                    formatted_chapter = format_chapter(\n",
+    "                        book_layout,\n",
+    "                        chapter_title,\n",
+    "                        chapter_number,\n",
+    "                        start_page\n",
+    "                    )\n",
+    "\n",
+    "                    # add chapter to prompt\n",
+    "                    prompt += f\"{formatted_chapter}\\n\"\n",
+    "                        \n",
+    "                    # set noise variables\n",
+    "                    if add_systemic_noise:\n",
+    "                        prompt += format_noise(noise_layout, start_page, end_page, toc_noise)\n",
+    "\n",
+    "                    # add random noise\n",
+    "                    add_random_noise = random.choices([0, 1], weights=[1-chapter_random_noise, chapter_random_noise], k=1)[0]\n",
+    "                    if add_random_noise:\n",
+    "                        prompt += generate_random_noise('random', toc_noise) + \"\\n\"\n",
     "                    \n",
-    "                # set noise variables\n",
-    "                if add_systemic_noise:\n",
-    "                    prompt += format_noise(noise_layout, start_page, end_page, toc_noise)\n",
+    "                    # add subchapters\n",
+    "                    if number_of_subchapter and add_subchapters: \n",
+    "                        number_of_subchapters_to_use = create_weighted_generator(number_of_subchapter, max_ceiling=9, start=2, weight_range=(3, 5), weight_multiplier=3)\n",
+    "                        number_of_subchapters_to_use = random.randint(1, number_of_subchapter)\n",
+    "                        actual_chapter_number = chapter[\"number\"]\n",
+    "                        \n",
+    "                        # define subchapters params\n",
+    "                        counter_ids = chapter_number + .1\n",
+    "                        page_range = end_page - start_page\n",
+    "                        \n",
+    "                        # adjust number of subchapters based on page range\n",
+    "                        if page_range <= number_of_subchapters_to_use:\n",
+    "                            number_of_subchapters_to_use = page_range - 2\n",
+    "                        \n",
+    "                        # NOW generate subchapters_ids with the final count\n",
+    "                        all_subchapters_ids = [f\"{actual_chapter_number}.{i}\" for i in range(1, number_of_subchapter + 1)]\n",
+    "                        subchapters_ids = np.random.choice(all_subchapters_ids,\n",
+    "                                                        size=number_of_subchapters_to_use,\n",
+    "                                                        replace=False)\n",
+    "                        \n",
+    "                        # generate pages array (now same size as subchapters_ids)\n",
+    "                        subchapters_pages = np.sort(np.random.choice(range(start_page, end_page), \n",
+    "                                                                size=number_of_subchapters_to_use, \n",
+    "                                                                replace=False))\n",
     "\n",
-    "                # add random noise\n",
-    "                add_random_noise = random.choices([0, 1], weights=[0.7, 0.3], k=1)[0]\n",
-    "                if add_random_noise:\n",
-    "                    prompt += generate_random_noise('random', toc_noise) + \"\\n\"\n",
-    "                \n",
-    "                # add subchapters\n",
-    "                if number_of_subchapter and add_subchapters: \n",
-    "                    number_of_subchapters_to_use = random.randint(1, number_of_subchapter)\n",
-    "                    actual_chapter_number = chapter[\"number\"]\n",
-    "                    \n",
-    "                    # define subchapters params\n",
-    "                    counter_ids = chapter_number + .1\n",
-    "                    page_range = end_page - start_page\n",
-    "                    \n",
-    "                    # adjust number of subchapters based on page range\n",
-    "                    if page_range <= number_of_subchapters_to_use:\n",
-    "                        number_of_subchapters_to_use = page_range - 2\n",
-    "                    \n",
-    "                    # NOW generate subchapters_ids with the final count\n",
-    "                    all_subchapters_ids = [f\"{actual_chapter_number}.{i}\" for i in range(1, number_of_subchapter + 1)]\n",
-    "                    subchapters_ids = np.random.choice(all_subchapters_ids,\n",
-    "                                                    size=number_of_subchapters_to_use,\n",
-    "                                                    replace=False)\n",
-    "                    \n",
-    "                    # generate pages array (now same size as subchapters_ids)\n",
-    "                    subchapters_pages = np.sort(np.random.choice(range(start_page, end_page), \n",
-    "                                                            size=number_of_subchapters_to_use, \n",
-    "                                                            replace=False))\n",
+    "                        # loop trough subchapters\n",
+    "                        for idx_sub, subchapter_id in enumerate(subchapters_ids):\n",
+    "                            for subchapter in chapter['subchapters']:\n",
+    "                                if subchapter[\"number\"] == subchapter_id:\n",
+    "                                    prompt += format_subchapter(subchapter[\"title\"], \n",
+    "                                                                counter_ids, \n",
+    "                                                                subchapters_pages[idx_sub], \n",
+    "                                                                use_numbers, \n",
+    "                                                                add_page)\n",
+    "                                    counter_ids = round(counter_ids + 0.1, 1)     \n",
+    "                                    add_random_noise_to_subchapters = random.choices([0, 1], weights=[1-subchapter_random_noise, subchapter_random_noise], k=1)[0]\n",
+    "                                    if add_random_noise_to_subchapters:\n",
+    "                                        prompt += generate_random_noise('subchapters', toc_noise) + \"\\n\"           \n",
     "\n",
-    "                    # loop trough subchapters\n",
-    "                    for idx_sub, subchapter_id in enumerate(subchapters_ids):\n",
-    "                        for subchapter in chapter['subchapters']:\n",
-    "                            if subchapter[\"number\"] == subchapter_id:\n",
-    "                                prompt += format_subchapter(subchapter[\"title\"], \n",
-    "                                                            counter_ids, \n",
-    "                                                            subchapters_pages[idx_sub], \n",
-    "                                                            use_numbers, \n",
-    "                                                            add_page)\n",
-    "                                counter_ids = round(counter_ids + 0.1, 1)     \n",
-    "                                add_random_noise_to_subchapters = random.choices([0, 1], weights=[0.8, 0.2], k=1)[0]\n",
-    "                                if add_random_noise_to_subchapters:\n",
-    "                                    prompt += generate_random_noise('subchapters', toc_noise) + \"\\n\"           \n",
+    "                    logging.debug(f\"Chapter layout: {formatted_chapter}\")\n",
+    "        \n",
+    "        # finish label format\n",
+    "        book_label = book_label[:-2] +'\\n]\\n```'\n",
+    "        output_data.append((prompt, book_label))\n",
+    "        logging.info(f\"{prompt}\")\n",
     "\n",
-    "                logging.debug(f\"Chapter layout: {formatted_chapter}\")\n",
-    "    \n",
-    "    # finish label format\n",
-    "    book_label = book_label[:-2] +'\\n]\\n```'\n",
-    "    output_data.append((prompt, book_label))\n",
-    "    logging.info(f\"{prompt}\")\n",
-    "\n",
-    "    book_name = None\n",
+    "        return output_data\n",
     "\n"
    ]
   },
